[package]
name = "culper"
description = " A tool to embedd encrypted secrets in yaml files"
version = "0.2.1-alpha.1"
authors = ["Max Kiehnscherf <max.kiehnscherf@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
serde = "1.0"
serde_yaml = "0.7"
rust-crypto = "^0.2"
rand = "0.5.5"
base64 = "0.9.2"
clap = "2.32.0"
error-chain = "0.12.0"
toml = "0.4.8"
serde_derive = "1.0.79"
rocket = "0.4.0-rc.1"
rocket_contrib = "0.4.0-rc.1"
regex = "1"
dirs = "1.0.4"
uuid = { version = "0.7", features = ["v4"] }
parking_lot = "0.6.4"
duct = "0.11.1"
