[package]
name = "culper"
version = "0.5.4-alpha.0"
authors = ["Mäx <max.kiehnscherf@gmail.com>"]
description = "secretly store secrets in your yaml"
edition = "2018"

[dependencies]
culper-lib = "0.1.0"
sequoia = { git = "https://github.com/maexrakete/sequoia.git" }
clap = "2.32.0"
failure = "0.1.2"
prettytable-rs = "0.8.0"
rpassword = "2.0.0"
tempfile = "3.0.4"
time = "0.1.38"
promptly = "0.1.5"
serde = "1.0"
serde_derive = "1.0.79"
serde_yaml = "0.7"
dirs = "1.0.4"
lazy_static = "1.2.0"
reqwest = "0.9.5"
toml = "0.4.8"
base64 = "0.9.2"
url = "1.7.2"
semver = "0.9"
self_update = "0.5"

[[bin]]
name = "culper"
path = "src/culper.rs"
