[package]
name = "culper-server"
version = "0.1.0"
authors = ["Mäx <max.kiehnscherf@gmail.com>"]
edition = "2018"

[dependencies]
culper-lib = { path = "../culper-lib" }
futures = "0.1"
env_logger = "0.5"
actix = "0.7"
actix-web = "0.7"
slog = "2.4.1"
slog-async = "2.3.0"
slog-json = "2.3.0"
slog-scope = "4.1.0"
slog-stdlog = "3.0.2"
chrono = "0.4.6"
slog-envlogger = "2.1.0"
log = "0.4.6"
toml = "0.4.8"
sequoia = { git = "https://github.com/maexrakete/sequoia.git" }
clap = "2.32.0"
failure = "0.1.2"
dirs = "1.0.4"
lazy_static = "1.2.0"

[[bin]]
name = "culper-server"
path = "src/culper_server.rs"
